fixed sizing and spacing in appointments

--- a/client/stylesheets/appointment.css
+++ b/client/stylesheets/appointment.css
@@ -72,6 +72,14 @@ tr:nth-last-child(1) {
   border-bottom: 1px solid rgb(215, 215, 215) !important;
 }
 
+.appt-row > td {
+  font-size: 1.2em;
+}
+
+.table th {
+  font-size: 1.2em;
+}
+
 .message-api {
   margin-top: 30px;
   color: #303641;
